--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -66,7 +66,7 @@
                     </tr>
                     {% else %}
                     <tr>
-                        <td colspan="5" class="text-center">Seu carrinho está vazio.</td>
+                        <td colspan="5" class="text-center">Fiz a alteração aqui!!!!</td>
                     </tr>
                     {% endfor %}
                 </tbody>
